# languages

./: .gitignore  .gitmodules  LICENSE  README.md
Django-Tutorial/: LICENSE  Readme.md  db.sqlite3
Node.js/: README.md
acmicpc/: 1000.cpp  1001.cpp  1002.cpp  1003.cpp  10039.cpp  1005.cpp  1008.cpp  1009.cpp  10101.cpp  10170.cpp  10171.cpp  10172.cpp  1026.cpp  10699.cpp  10718.cpp  1100.cpp  1237.cpp  1373.cpp  1377.cpp  1377_ref.cpp  1475.cpp  1550.cpp  1727.cpp  1735.cpp  1789.cpp  1871.cpp  1934.cpp  2004.cpp  2010.cpp  2163.cpp  2407.cpp  2420.cpp  2438.cpp  2439.cpp  2440.cpp  2441.cpp  2442.cpp  2443.cpp  2444.cpp  2445.cpp  (+59 more)
algorithm/: boardcover2.py  clocksync.py  disjoint_set.py  editorwars.cpp  loan.py  loan_han.cpp  lunchbox.py  nerd.cc  numbergame.py  poly.py  runningmedian.py  strjoin.py  tictactoe.py
boost/: BoostTestConfig.h.in  CMakeLists.txt  README.md  thread.cpp
cpp/: .clang-format  arithmetic.cpp  bind.cpp  c11.cpp  ctor.cpp  erase.cpp  exception.cpp  func.cpp  func.h  inherit.cpp  inlineNamespace.cpp  lambda.cpp  move.cpp  mutex.cpp  noexcept.cpp  oop.cpp  ref.cpp  reference.cpp  rvalue.cpp  struct.cpp  template.cpp  templateMeta.cpp  test.cpp  test2.cpp  test3.cpp  thread.cpp  threadCopy.cpp  type.cpp  variadic_template.cpp  variodic.cpp
django-polls/: setup.py
effective_cpp/: Rational.cpp  const.cpp  friend.cpp  noncopable.cpp  sizeof_class.cpp  template.cpp  virtual.cpp  virtual_destructor.cpp
emcpp/: 1.cc  2.cc  Makefile
leet_code/: 292.cpp  448.cpp  49.cpp
modern_effective_cpp/: README.md  mutable.cpp
python/: compile.txt
(+215 files in other folders)
